<resources>
    <string name="app_name">ChemistryApp</string>
    <string name="name_label">Sample Name:</string>
    <string name="concentration_label">Concentration:</string>
    <string name="rgb_label">RGB</string>
    <string name="wavelength_label">Wavelength ID</string>
    <string name="absorbency_label">Absorbance Value</string>
    <string name="data_Filler">---</string>
    <string name="thumbnail_description">Thumbnail of the picture taken of the sample</string>
    <string name="cam_button">Button to open camera</string>
    <string name="trash_button">Button to remove data from a sample</string>
    <string name="prompt">Are you sure you want to delete this sample?</string>
    <string name="prompt2">Instructions place holder</string>
</resources>