<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
    <Spinner
        android:id="@+id/spnSamples"
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">
    <TextView
        android:id="@+id/lblName"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:gravity="start"
        android:text="@string/name_label"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/txtSampleName"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:gravity="end"
        android:inputType="text"
        android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp">
        <TextView
            android:id="@+id/lblConcentration"
            android:layout_width="145dp"
            android:layout_height="25dp"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="5dp"
            android:text="@string/concentration_label"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtConcentration"
            android:layout_width="145dp"
            android:layout_height="45dp"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="161dp"
        android:orientation="vertical"
        android:background="@drawable/border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/rgb_label"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblRed"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_marginStart="77dp"
                android:layout_marginLeft="78dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/data_Filler"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/lblGreen"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/data_Filler"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/lblBlue"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/data_Filler"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="230dp"
        android:orientation="vertical"
        android:background="@drawable/border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/wavelength_label"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblWaveId"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="133dp"
                android:layout_marginLeft="133dp"
                android:text="@string/data_Filler"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="299dp"
        android:orientation="vertical"
        android:background="@drawable/border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/absorbency_label"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblAbsorbVal"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="133dp"
                android:layout_marginLeft="133dp"
                android:text="@string/data_Filler"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="390dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

           <ImageView
               android:id="@+id/imgThumbnail"
               android:layout_width="300dp"
               android:layout_height="200dp"
               android:background="@drawable/thumbnailstyles"
               android:contentDescription="@string/thumbnail_description"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/btnCamera"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@mipmap/cam_foreground"
                android:background="@drawable/buttons"
                android:layout_marginStart="70sp"
                android:layout_marginLeft="70sp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/cam_button"/>

            <ImageButton
                android:id="@+id/btnTrash"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:background="@drawable/buttons"
                android:src="@mipmap/trash_foreground"
                android:layout_marginStart="40sp"
                android:layout_marginLeft="40sp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/trash_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="110dp"
                android:layout_marginLeft="110dp"
                android:text="?"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>